# libhostile

./: .gitignore  .travis.yml  GNUmakefile  LICENSE  Makefile.am  README.md  configure.ac  hostile.sh.in
docs/: conf.py  include.am  index.rst
docs/_static/: empty
docs/compiling/: index.rst
docs/shell/: index.rst
docs/using/: faq.rst  index.rst
libtest/: include.am
m4/: ax_compiler_version.m4  ax_debug.m4  ax_harden_compiler_flags.m4  ax_mac_universal.m4  ax_printf_strerror.m4  config_extra.m4  include.am
src/: accept.c  called.c  called.h  close.c  connect.c  function.c  function.h  getaddrinfo.c  getaddrinfo.h  hostile.h  include.am  initialize.c  initialize.h  malloc.c  pipe.c  poll.c  realloc.c  recv.c  send.c  setsockopt.c  socket.c  socket_server.c  visibility.h  write.c
src/t/: accept.c  close.c  include.am  pipe.c  pipe2.c
